--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8" />
+<meta
+name="viewport"
+content="width=device-width, user-
+scalable=no, initial-scale=1.5, maximum-
+scale=1.5, minimum-scale=1.5"
+/>
+<meta http-equiv="X-UA-Compatible"
+content="ie=edge" />
+<link rel="stylesheet" href="./style.css"
+/>
+<title>Bayerische Motoren Werke</title>
 </head>
 <body>
-    <h1>hello git</h1>
+    <div class="header">
+        <a href="https://www.bmw.ru/ru/index.html">
+        <img src="./img/logo.png" alt="logo" width="100px" height="100px">
+        </a>
+        <div class="navbar">
+        <ul class="menu-list">
+            <li class="menu-item"><a href='index2.html'>автомобили</a></li>
+        </ul>
+    </div>
+    </div>
+    <main class="main">
+        <p class="main-text">Быстрые автомобили для спортивной езды</p>
+        <blockquote class="quote">
+            “Freude am Fahren” «С удовольствием за рулем»
+        </blockquote>
+        <button class="button-order"><a href="index4.html">Заказать</a></button>
+    </main>
 </body>
 </html>
